--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.10.0",
+    "jimp": "^0.16.2",
     "react": "^18.2.0",
+    "react-blur": "^1.1.1",
     "react-dom": "^18.2.0",
     "react-jigsaw-puzzle": "^1.0.4",
     "react-router-dom": "^6.4.1",
