--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +11,10 @@
     "firebase": "^9.10.0",
     "jimp": "^0.16.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-blur": "^1.1.1",
     "react-dom": "^18.2.0",
+    "react-id-generator": "^3.0.2",
     "react-jigsaw-puzzle": "^1.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
